[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-append-vec-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.0.15"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
clap = "2.33.0"
solana-logger = { path = "../logger", version = "1.0.15" }
log = "0.4.8"
solana-runtime = { path = "../runtime", version = "1.0.15" }
