[package]
name = "solana-poh"
version = "1.1.0"
description = "Solana ledger"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
solana-logger = { path = "../logger", version = "1.1.0" }
solana-sdk = { path = "../sdk", version = "1.1.0" }
log = { version = "0.4.8" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
matches = "0.1.6"

[[bench]]
name = "poh"

[lib]
crate-type = ["lib"]
name = "solana_poh"
